deployment-k8s/sawtooth/sawtooth-single-node/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xxx3
spec:
  selector:
    matchLabels:
      app: xxx3
  template:
    metadata:
      labels:
        app: xxx3
    spec:
      containers:
        - name: sawtooth-rest-api
          image: hyperledger/sawtooth-rest-api:1.1
          ports:
            - containerPort: 8008
          command:
            - bash
          args:
            - -c
            - 'sawtooth-rest-api -C tcp://147.75.105.231:4004 --bind 0.0.0.0:8008'
---
apiVersion: v1
kind: Service
metadata:
  name: xxx3
spec:
  selector:
    app: xxx3
  ports:
    - port: 80
      targetPort: 8008
