deployment-k8s/sawtooth/sawtooth-single-node/services.yml
kind: Service
apiVersion: v1
metadata:
  name: singlenode2
spec:
  selector:
    app: singlenode2
  ports:
    - port: 8008
      protocol: TCP
      targetPort: 8008
